--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -9,21 +9,21 @@
 .header__nav--items{
     display: flex;
     padding: 6px;
-    column-gap: 3rem;
+    column-gap: 5rem;
 }
 
 
 .headerhomepage__btn--menu{
     width: 34px;
     height: 23px;
-    left: 23px;
-    top: 0px;
+    margin: 5px;
     margin-left: auto;
 
 }
 .header__nav--language{
     width: 34px;
     height: 23px;
-    left: 23px;
-    top: 0px;
+    margin:2px;
+    margin: 2px;
+    margin-top: 7px;
 }
