--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -5,11 +5,11 @@
     right: 0%;
     width: 80vw;
     height: 100vh;
-   background-color:var(--bleu-foncé);
+   background-color:var(--bleu);
    display: grid;
    place-content: center;
    
-    }
+}
   
   .header__menuBtn {
     position: relative;
