--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -15,3 +15,11 @@
     position: relative;
     z-index: 10;
   }
+
+  .menu__title--decoration{
+    border: 2px solid var(--marron-clair);
+    border-width: 2px 0px 0px 0px;
+    padding-bottom: 7px;
+    width: 309px;
+    margin-inline: auto;
+  }
