--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -12,15 +12,19 @@ body{
 
 
 h1{
-    font-style: 'Neuton';
+    font-family: 'Neuton';
     font-size: 20px
     color var(--noir);
 }
 h3{
-    font-style: 'IM FELL French Canon';
+    font-family: 'IM FELL French Canon';
     font-size: 16px
     color var(--noir);
 
+}
+h4{
+    font-family: 'Neuton';
+    font-size: 22px;
 }
 
 button {
@@ -32,6 +36,6 @@ button {
   }
 
 .body__infoexpo{
-    margin-top: 10px;
+    margin-top: 27%;
 
 }
