ajout redirect englais et modifs fichier langues

--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -27,6 +27,7 @@
     color: var(--blanc-cassé);
     font-family: 'Neuton';
     font-size: 22px;
+    margin: 15px;
   }
   .menu__liste--artistes{
     font-family: 'IM FELL French Canon';
