--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -70,7 +70,12 @@ button {
 
 
 .body__liste--visite{
-    
+    list-style-type: none;
+    margin: 8%;
+    padding: 3%;
+    text-align: center;
+    font-family: 'IM FELL French Canon';
+    font-size: 16px;
 }
 
 .body__btn{
