modif lignes décoration

--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -55,14 +55,14 @@ button {
 
 
 .body__lign--blue{
-    border: 2px solid var(--marron-clair);
+    border: 2px solid var(--bleu);
     border-width: 2px 0px 0px 0px;
     padding-bottom: 7px;
     width: 200px;
     margin-inline: auto;
 }
 .body__lign--green{
-    border: 2px solid var(--marron-clair);
+    border: 2px solid var(--vert);
     border-width: 2px 0px 0px 0px;
     padding-bottom: 7px;
     width: 200px;    
