--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -12,11 +12,18 @@ body{
 
 h1{
     font-family: 'Neuton';
-    font-size: 20px
+    font-size: 22px
     color var(--noir);
     text-align: center;
 }
-h3{
+h2{
+    font-family: 'IM FELL French Canon';
+    font-size: 19px
+    color var(--noir);
+    text-align: center;
+}
+
+p{
     font-family: 'IM FELL French Canon';
     font-size: 16px
     color var(--noir);
