--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -12,8 +12,8 @@ body{
 
 h1{
     font-family: 'Neuton';
-    font-size: 22px
-    color var(--noir);
+    font-size: 22px;
+   color: var(--noir);
     text-align: center;
 }
 h2{
@@ -22,18 +22,23 @@ h2{
     color var(--noir);
     text-align: center;
 }
-
-p{
+h3{
     font-family: 'IM FELL French Canon';
-    font-size: 16px
+    font-size: 18px
     color var(--noir);
     text-align: center;
-
 }
 h4{
     font-family: 'Neuton';
     font-size: 22px;
 }
+p{
+    font-family: 'IM FELL French Canon';
+    font-size: 16px
+    color var(--noir);
+    text-align: center;
+}
+
 
 button {
     appearance: none;
