--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -55,13 +55,12 @@ button {
 .body__presentationexpo{
     margin-top: 27%;
 }
-
+.body__heading{
+    margin-top: 27%;
+}
 .body__content--text{
 
 }
-
-
-
 
 
 .body__liste--visite{
