--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -3,12 +3,11 @@
     top: 0;
     right: 0;
     left: 0;
-    padding: 7px;
+    padding: 4px;
     background-color: var(--bleu);
 }
 .header__nav--items{
     display: flex;
-    padding: 6px;
     column-gap: 5rem;
 }
 
@@ -25,5 +24,5 @@
     height: 23px;
     margin:2px;
     margin: 2px;
-    margin-top: 7px;
+    margin-top: 2rem;
 }
