--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -97,3 +97,9 @@ button {
 .body__img{
     margin-top: 20%;
 }
+blockquote{
+    text-align: center;
+    font-family: 'IM FELL French Canon';
+    font-size: 20px;
+    font-weight: 400;
+}
