--- a/src/css/components/freize.css
+++ b/src/css/components/freize.css
@@ -1,16 +1,7 @@
 .body__freize{
-    
+    padding: 3px;
+}
+.main__freiz--elements{
+    width: 70%;
 }
 
-.freize__circle{
-    border: 2px solid var(--bleu);
-    border-width: 100px 100px 5px 7px;
-    border-radius: 100%;
-    padding-bottom: 7px;
-    width: 100px;
-    height: 100px;
-}
-.body__freize{
-    width:100% ;
-    display: flex;
-}
